# ledClock-backend

./: .env  .gitignore  Pipfile  README.md  driver.dockerfile  emulator_config.json  git-pull-update-script.sh  main.py  pyproject.toml  server.dockerfile
.devcontainer/: devcontainer.json
.github/deploy/: docker-compose.aurora.yml  docker-compose.local.yml
.github/workflows/: build-and-trigger-deploy.yml  deploy-driver-and-server.yml
client/: Pipfile  main.py
client/models/: matrix.py  socket.py
rpi-rgb-led-matrix/examples-api-use/: input-example  pixel-mover
scripts/: git-pull-update-script.sh
server/: Pipfile  server.py
server/controllers/: matrix_controller.py
server/models/: emulated_led.py  local_led.py  matrix.py
